styles/personalPortfolio.css
/*Base */
body, header, section, div, nav, article{
    display: block;
    box-sizing: border-box;
}
body, header, section, footer{
    margin: 0;
    padding: 0;
    background-color: rgb(241, 250, 238);
    font-family: Roboto, sans-serif;
    font-size: 1em;
}
header{
    width: 100%;
    background-color: rgba(29, 53, 87, 0.5);
    z-index: 5;
}
small, h1, h3, h4{
    font-family: Cinzel, sans-serif;
}
h1{
    font-size: 5vw;
}
small{
    font-size: 0.6em;
    letter-spacing: 2px;
    font-weight: 500;
    padding-right: 1em;
    padding-left: 1em;
}
img{
    max-width: 100%;
}

a{
    display: inline-block;
    text-decoration: none;
}
dd, li{
    font-variant: small-caps;
    background: linear-gradient(90deg, rgba(29, 53, 87, 0.397) 5%,
    rgba(69, 123, 157, 0.25) 80%, rgb(241, 250, 238) 100%);
}
figure{
    margin: 0 auto;
    padding: 1em 0.5em  0 0.5em;
    background-color: rgb(29, 53, 87);
    color: white;
    border-top-left-radius: 1em;
    border-top-right-radius: 1em;
    border-bottom-left-radius: 50%;
    border-bottom-right-radius: 50%;

}
figcaption{
    text-align: center;
    font-size: 12px;
    margin: 1em auto;
}
article{
    min-height: 400px;
    height: 100%;
    position: relative;/*for project title positioning*/
}
label{
    display: block;
    margin-top: 15px;
    margin-bottom: 5px;
}
input{
    background-color: rgba(29, 53, 87, 0.1);
    height: 1.5em;
    width: 100%;
}
textarea{
    background-color: rgba(29, 53, 87, 0.1);
    width: 95%;
    display: block;
    margin: 0 auto;
}
button{
    font-size: 1.2em;
    display: block;
    margin: 0 auto;
    
}
footer{
    margin: 10px 0;
    background-color: rgba(29, 53, 87, 0.25);
}
span {
    color: rgb(29, 53, 87);
}
/*layout*/
#header{
    position: fixed;
    top: 0;
}
#welcome-section{
    color: white;
    background-color: rgb(29, 53, 87);
    min-height: 110vh;
    clip-path: polygon(100% 0, 100% 95%, 30% 100%, 0 95%, 0 0);
}
#about, #contact, figure{
    max-width: 720px;
    margin: auto;
}
@media screen and (min-width: 720px) {
    #grid-container{
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
        grid-template-rows: 1fr;
        gap: 1em;
        justify-content: stretch;
    }
}
/*Fix section headers being covered by fixed header*/
#about, #projects{
    padding-top: 40px;
}
#social-links{
    text-align: center;
    font-size: xx-large;
    margin-top: 1em;
}

/*modules*/
.nav-links a:visited, .nav-links a:link{
    height: 30px;
    line-height: 30px;
    padding: 0.25em 1em;
    color: rgb(255, 255, 255);
    border-left: 1px solid rgb(241, 250, 238);
    border-right: 1px solid rgb(241, 250, 238);
}
.nav-links a:hover{
    background-color: rgb(230, 57, 70);
    color: rgb(29, 53, 87);
    border: none;
}
.h-center{
    display: flex;
    justify-content: center;
    
}
.v-align{
    align-items: center;
}
.r-align{
    text-align: right;
    padding-right: 1em;
}
.colored-text{
    color: rgb(230, 57, 70)
}
.local-link{
    color: rgb(69, 123, 157);
}
.section-heading, .list{
    margin-left: 2em;
}
.description{
    margin: 1em;
    padding: 1em;
    text-align: justify;
    border: 1px solid rgb(29, 53, 87);
    border-radius: 1em;
}
.list-header{
    font-family: Cinzel, sans-serif;
    font-weight: 400;
}
.round-img{
    border-radius: 50%;  
    border: 2px solid rgb(241, 250, 238);
}
.profile-picture{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}
.project-tile{
    padding: 0.25em 1em;
    margin-bottom: 1em;
}
.project-title{
    position: absolute;
    bottom: 10px;
    margin: 0;
    width: 100%;
    background-color: rgba(29, 53, 87, 0.5);
    color: rgb(241, 250, 238)
}
.project-link{
    padding: 2px 5px;
    margin-left: 5px;
    color: rgb(230, 57, 70);
}
.project-link:hover{
    background-color: rgb(241, 250, 238);
    box-shadow: 1px 1px 3px 2px rgba(29, 53, 87, 0.7);
}
.project-tile .overlay{
    opacity: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    padding-bottom: 2em;
    background-color: rgba(128, 128, 128, 0.75);
    font-size: 1.5em;
    color: white;
}
.project-tile .overlay:hover{
    opacity: 1;
    box-shadow: 2px 2px 5px 5px rgba(29, 53, 87, 0.3);
}
.copyrights{
    background-color: rgba(29, 53, 87, 0.7);
    text-align: center;
}

